--- a/Playwright-main/Jenkinsfile
+++ b/Playwright-main/Jenkinsfile
@@ -22,5 +22,13 @@ pipeline {
         '''
       }
     }
+    post {
+                always {
+                    allure includeProperties:
+                     false,
+                     jdk: '',
+                     results: [[path: 'build/allure-results']]
+                }
+    }
   }
 }
