--- a/jenkins-example-playwright-main/Jenkinsfile
+++ b/jenkins-example-playwright-main/Jenkinsfile
@@ -26,9 +26,15 @@ pipeline {
         '''
       }
       post {
-        success {
-          archiveArtifacts(artifacts: 'homepage-*.png', followSymlinks: false)
-          sh 'rm -rf *.png'
+        junit 'test-results/junit-report.xml'
+            publishHTML(target: [
+                allowMissing: false,
+                alwaysLinkToLastBuild: true,
+                keepAll: true,
+                reportDir: 'playwright-report',
+                reportFiles: 'index.html',
+                reportName: 'Playwright Report'
+            ])
         }
       }
     }
