--- a/jenkins-example-playwright-main/Jenkinsfile
+++ b/jenkins-example-playwright-main/Jenkinsfile
@@ -26,17 +26,17 @@ pipeline {
         '''
       }
       post {
-        junit 'test-results/junit-report.xml'
-            publishHTML(target: [
-                allowMissing: false,
-                alwaysLinkToLastBuild: true,
-                keepAll: true,
-                reportDir: 'test-results',
-                reportFiles: 'playwrightReport.html',
-                reportName: 'Playwright Report'
-            ])
-        }
-      }
+                steps {
+                script {
+                    allure([
+                        includeProperties: false,
+                        jdk: '',
+                        properties: [],
+                        reportBuildPolicy: 'ALWAYS',
+                        results: [[path: '$WORKSPACE/target/allure-results']]
+                    ])
+                }
+            }
     }
   }
 }
